tests/resources/invalid/type/function/no_type.mamba
def g(a) => print("all non-self arguments should have type if no default")
